# blinkview

./: .cursorrules  .gitignore  DEVELOPER.md  README.md  agents.md  mkdocs.yml  pyproject.toml
.run/: BLINC (CLI).run.xml  BLIND (Daemon).run.xml  BLIND.run.xml  BLING (GUI).run.xml  CLI.run.xml  GUI.run.xml
docs/: reference.md
scripts/: license.py  mem_check.py  release.py
src/blinkview/: __init__.py  __main__.py  cli.py  daemon.py  gui.py
src/blinkview/core/: BaseBindableConfigurable.py  array_pool.py  base_configurable.py  base_daemon.py  base_reorder.py  batch_queue.py  batched_logrows.py  bindable.py  bisect_reorder.py  buffers.py  central_storage.py  config_manager.py  configurable.py  constants.py  device_identity.py  dtypes.py  factory.py  factory_registry.py  id_registry.py  limits.py  log_row.py  logger.py  module_snapshot.py  numba_config.py  numba_setup.py  numpy_batch_manager.py  numpy_buffer_pool.py  numpy_log.py  pipeline_manager.py  plugin_manager.py  registry.py  reorder_buffer.py  reorderer.py  reusable_batch_pool.py  settings_manager.py  sources.py  system_context.py  task_manager.py  time_sync_engine.py  warmup.py
src/blinkview/core/id_registry/: __init__.py  registry.py  tables.py  types.py
src/blinkview/core/types/: empty.py  formatting.py  frames.py  log_batch.py  modules.py  output.py  parsing.py  segments.py  telemetry.py
src/blinkview/io/: BaseReader.py  __init__.py  adb_reader.py  adb_time_syncer.py  benchmark.py  binary_file_reader.py  can_bus.py  logging.py  rtt.py  serial_time_syncer.py  tcp_server.py  uart.py
src/blinkview/ops/: buffers.py  codec_adb_long.py  codecs.py  constants.py  discovery.py  dispatch.py  formatting.py  frame_dispatch.py  generic.py  id_registry.py  levels.py  modules.py  normalization.py  pipeline.py  segments.py  strings.py  telemetry.py  timestamps.py  timesync.py  zephyr_timestamp.py
src/blinkview/parsers/: __init__.py  adb_decoder.py  assembler.py  binary_parser.py  can_bus.py  can_parser.py  cantools_decoder.py  cobs_decode.py  configurable_parser.py  fixed_width_path_normalizer.py  frame_decoders.py  frame_parsers.py  key_value.py  line_parser.py  logger_parser.py  module_path_normalizer.py  msgpack_parser.py  parser.py  state.py  text_filter.py  transformer.py
src/blinkview/storage/: __init__.py  file_logger.py  file_manager.py  raw_logger.py
src/blinkview/subscribers/: console.py  subscriber.py
src/blinkview/ui/: __init__.py  cli_args.py  gui_context.py  log_filter_index_manager.py  main_window.py  module_gui_meta.py  native_dark_mode.py  run.py
src/blinkview/ui/utils/: config_node.py  config_node_manager.py  in_development.py  log_velocity_tracker.py  ui_state_handler.py  update_checker.py  window_manager.py
src/blinkview/ui/widgets/: TelemetryWatch.py  action_button_delegate.py  base_list_item.py  base_sidebar_widget.py  config_widget_factory.py  device_sidebar.py  log_highlighter.py  log_viewer.py  message_box.py  mock_config.py  module_filter_model.py  module_filter_sidebar.py  module_filter_table.py  pipelines_sidebar.py  plotter.py  searchable_log_area.py  telemetry_model.py  telemetry_table.py  title_bar.py  toast.py  toast_dispatcher.py  update_widget.py
src/blinkview/ui/widgets/config/: demo_window.py  dynamic_config.py  mock_backend.py  style_config.py
src/blinkview/ui/windows/: detached_tab_window.py  log_window.py
src/blinkview/utils/: adb.py  atomic_json_dump.py  audit_imports.py  cli_updater.py  config_handler.py  dict_utils.py  fnv1a_64.py  format_metric.py  generate_id.py  github_update.py  global_settings.py  level_map.py  log_filter.py  log_level.py  paths.py  profile_memory.py  project_settings.py  session_metadata.py  settings.py  settings_updater.py  throughput.py  time_utils.py  update_handler.py  updater.py  used_modules.py  utc_offset.py
tests/: test_registry_memory.py
