[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blinkview"
dynamic = ["version"]
description = "High-performance embedded telemetry, log viewer, and plotting tool."
readme = "README.md"
# We allow 3.10+, but our 'daemon' env will target 3.14t for No-GIL
requires-python = ">=3.10, <3.15"
license = { text = "MPL-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)", # Correct format
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
]
authors = [
    { name = "Roland Uuesoo", email = "rolandu@gmail.com" }
]
keywords = [
    "embedded", "telemetry", "logging", "plotting", "real-time",
    "can-bus", "serial", "uart", "jlink", "rtt", "segger",
    "mcu", "arduino", "esp32", "stm32", "sam",
    "diagnostics", "visualization", "data-analysis"
]

# --- Core Dependencies (Safe for all runtimes, including 3.14t) ---
dependencies = [
    "rich>=13.0.0",
    "readchar",
    "jsonschema",
    "jsonpatch",
    "msgpack",
    "cobs",
    "requests",
    "packaging",
]

[project.optional-dependencies]

# Hardware Backends
serial = ["pyserial>=3.5"]
can = ["python-can", "cantools"]
jlink = ["pylink-square"]

# Combined Hardware Support (All drivers)
hardware = [
    "blinkview[serial,can,jlink]",
]

# --- Optional GUI Dependencies (GIL-dependent) ---
gui-core = [
    "qtpy>=2.4.0",
    "pyqtdarktheme",
    "pyqtgraph",
    "numpy",
    "numba"
]

pyside6 = ["PySide6>=6.6.0", "blinkview[gui-core]"]
pyqt6 = ["PyQt6>=6.6.0", "blinkview[gui-core]"]

all = [
    "blinkview[hardware,pyside6]",
]

[project.scripts]
blink = "blinkview.__main__:main"
#blind = "blinkview.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.15.8",
    "blinkview[all]",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]

daemon = [
    "blinkview[hardware]",
]

# --- HATCH SPECIFIC ---
[tool.hatch.envs.default]
features = ["all"]

[tool.hatch.envs.daemon]
# Target for 3.14t (No-GIL) - naming the env 'daemon' but using 'hardware' features
features = ["hardware"]

[tool.hatch.version]
path = "src/blinkview/__init__.py"

[tool.ruff]
line-length = 120
lint.select = ["I"]
lint.ignore = ["F401"]
